- jQuery::UI::datepicker was updated to 3.4
- a bug with FCKEditor's filemanager was solved
- P4A_Button now render the "disabled='disabled'" property if disabled
- P4A_Button now addes 'p4a_button_disabled' or 'p4a_button_image_disabled' class if disabled
- a bug with P4A_Field autocomplete was solved 
- P4A_DB_Source was completely ported to the new error handlers
- multicheckbox CSS was fixed

2.99.4
- a bug with quoted strings in P4A_Field::getAsSelect was solved
- a bug with P4A::getFocusedObjectId() method was solved
- P4A_Object::__call() method now uses trigger_error() instead of p4a_error() when a method is not found
- P4A_Object::_loadHelper() method now direcly call P4A_Error_Handler() instead of trigger_error,
  so we can pass the error file/line and have a readable resulting error message
- a few modifications were done on P4A_DB_Source so now you can add joins without selecting
  any column from the joined table
- P4A_DB::getDBType() method was added
- P4A_DB_Source::getRowPosition() mystical bug with MySQL (same query called 2 times returns 2 different results)
  was found again and patched again
- a bug with P4A_ERROR_Handler() was solved
- P4A_Field was ported to trigger_error() instead of p4a_error
- P4A::raiseXMLresponse() method is now public
- P4A_Error_Handler was rewritten to be used in ajax calls too
- check_configuration library now also checks for PHP version
- P4A::executeExternalCommands() method was added
- all tasks dealing with external systems where moved from P4A::main() to P4A::executeExternalCommands()
- P4A::executeExternalCommands() is executed just after the session_start(), in the P4A::singleton() method
- P4A_Object::destroy() now checks if every object to destroy is a P4A_Object before calling destroy() recursively on it

2.99.3
- P4A_Toolbars code was refactored using P4A chainability
- a bug with P4A_Full_Toolbar and P4A_Simple_Toolbar about delete was solved
- a bug with P4A_DB_Source::deleteRow was solved